Fixed spacing of headings and subheadings for mobile

--- a/styles.css
+++ b/styles.css
@@ -561,7 +561,7 @@ html, body {
   }
 
   .text h1 {
-    margin-top: 110px;
+    margin-top: 25%;
     padding: 50px;
     font-size: 36px;
   }
@@ -569,13 +569,13 @@ html, body {
   .desription h2 {
     padding-left: 50px;
     padding-right: 20px;
-    padding-top: 240px; 
+    padding-top: 55%; 
     font-size: 26px;
     color: rgb(225, 200, 250);
   }
 
   .stack p {
-    padding-top: 290px;
+    padding-top: 65%;
     padding-left: 50px;
     font-size: 18px;
   }
